# graphql_rust

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/api/: handler.rs  header.rs  mod.rs
src/api/graphql/: mod.rs  query_root.rs  schema.rs  subscription_root.rs
src/api/graphql/dataloader/: mod.rs  posts.rs  posts_by_user_id.rs
src/api/graphql/objects/: posts.rs  users.rs
src/api/graphql/resolvers/posts/queries/: get_post_by_id.rs  get_posts.rs  mod.rs
src/api/graphql/resolvers/users/queries/: get_user_by_id.rs  get_users.rs
src/api/graphql/users/: dataloader.rs  mod.rs  object.rs
src/api/graphql/users/queries/: get_user_by_id.rs  get_users.rs  mod.rs
src/database/: connect.rs
